--- a/config.json
+++ b/config.json
@@ -3,8 +3,8 @@
   "address": "0.0.0.0",
     "links": [
       {"id": 1, "title": "notmycode_home", "description": "An normycode.dev homepage", "link": "https://notmycode.dev", "duration": "10s"},
-      {"id": 2, "title": "notmycode_statuc", "description": "Static file for notmycode.dev", "link": "https://static.notmycode.dev"}
+      {"id": 2, "title": "notmycode_status", "description": "Static file for notmycode.dev", "link": "https://static.notmycode.dev"}
     ],
-    "duration": "2s"
+    "duration": "20s"
   }
   
